# Klangenan-AI

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml
service/embeddings/: model.py  router.py
services/embedding/: config.py  model.py  schemas.py
services/embedding/database/: connection.py  migration.sql  migrations.sql
services/embedding/llm/: base.py  factory.py  gemini.py  ollama.py
services/embedding/models/: bread.py
services/embedding/repositories/: bread_repository.py
services/embedding/routes/: chat.py  embed.py  recommend.py
