[project]
name = "klangenan-ai"
version = "0.1.0"
description = "Microservice AI: Embedding dan Layanan AI Lainnya"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2>=2.9.11",
    "google-generativeai>=0.8.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",   # untuk testing endpoint
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]
